--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ input[type="radio"].visually-hidden {
 /* header */
 
 .main-header {
-  width: 1440px;
+
   margin: 0 auto;
   padding: 0;
   padding-top: 40px;
@@ -232,12 +232,15 @@ input[type="radio"].visually-hidden {
   list-style: none;
 }
 
+.main-header__user-navigation {
+  width: 250px;
+}
 
 .main-header__site-navigation {
   display: block;
   margin: 0 auto;
   padding: 0;
-  padding-bottom: 40px; /* соотносить с отступами у поп-ап меню */
+  padding-bottom: 50px; /* соотносить с отступами у поп-ап меню */
 }
 
 .main-header__navigation-item {
@@ -249,6 +252,7 @@ input[type="radio"].visually-hidden {
   font-size: 15px;
   line-height: 30px;
   font-weight: 400;
+  letter-spacing: 0.15px;
 
   text-decoration: none;
 
@@ -259,7 +263,7 @@ input[type="radio"].visually-hidden {
 
 .main-header__navigation-item--user {
   padding-left: 26px;
-  padding-right: 44px;
+  padding-right: 20px;
 }
 
 .main-header__navigation-item--user::before {
@@ -333,7 +337,7 @@ input[type="radio"].visually-hidden {
 
 .main-header__navigation-item--compare {
   padding-left: 20px;
-  padding-right: 41px;
+  padding-right: 39px;
 }
 
 .main-header__navigation-item--compare::before {
@@ -343,7 +347,7 @@ input[type="radio"].visually-hidden {
   height: 10px;
 
   position: absolute;
-  top: 10px;
+  top: 12px;
   left: 0px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z'/%3E%3C/svg%3E%0A");
@@ -429,7 +433,7 @@ input[type="radio"].visually-hidden {
 
 .main-header__navigation-header-item--warranty {
   display: block;
-  width: 225px;
+  width: 220px;
 }
 
 .main-header__navigation-header-item--delivery {
@@ -479,7 +483,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-top: 20px;
-  padding-bottom: 35px;
+  padding-bottom: 37px;
   width: 600px;
 
   flex-wrap: wrap;
@@ -534,7 +538,6 @@ input[type="radio"].visually-hidden {
 /* main-sliders */
 
 .main-slider {
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
   padding-bottom: 35px;
@@ -542,9 +545,19 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
+.main-slider__inner-wrapper {
+  margin: 0 auto;
+  padding: 0;
+  width: 1160px;
+
+  position: relative;
+}
+
+
 .main-slider__under-mask {
   position: absolute;
-  left: 140px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: -1;
   line-height: 0;
 }
@@ -566,6 +579,7 @@ input[type="radio"].visually-hidden {
 
 .main-slider__item-img {
   display: flex;
+
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -573,7 +587,7 @@ input[type="radio"].visually-hidden {
 }
 
 .main-slider__item-img--quadcopter {
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 .main-slider__item-content {
@@ -591,7 +605,7 @@ input[type="radio"].visually-hidden {
 
 .main-slider__item-number-header {
   position: absolute;
-  top: 0;
+  top: -10px;
   right: 50px;
   z-index: -1;
 
@@ -608,8 +622,8 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-top: 90px;
-  padding-bottom: 23px;
+  padding-top: 80px;
+  padding-bottom: 20px;
   width: 397px;
 
   font-family: "Gilroy", Arial, sans-serif;
@@ -629,7 +643,7 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-bottom: 45px;
+  padding-bottom: 44px;
   width: 485px;
 
   font-family: "OpenSans", Arial, sans-serif;
@@ -696,7 +710,7 @@ input[type="radio"].visually-hidden {
 }
 
 .main-slider__item-table {
-  padding-top: 50px;
+  padding-top: 45px;
 }
 
 .main-slider__item-table-value td {
@@ -711,19 +725,23 @@ input[type="radio"].visually-hidden {
 }
 
 .main-slider__item-table-value td:first-child {
-  width: 160px;
-  height: 50px;
+  width: 156px;
+  height: 55px;
+  margin: 0;
+  padding: 0;
 }
 .main-slider__item-table-value td:nth-child(2) {
-  width: 140px;
+  width: 136px;
 }
 .main-slider__item-table-value td:nth-child(3) {
   width: 160px;
 }
 
 .main-slider__item-table-parameter td {
+  margin: 0;
+  padding: 0;
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 20px;
   font-weight: 400;
   letter-spacing: 0.13px;
@@ -741,8 +759,8 @@ input[type="radio"].visually-hidden {
   height: 12px;
 
   position: absolute;
-  right: 220px;
-  top: 340px;
+  right: 82px;
+  bottom: 216px;
   z-index: 10;
 
   font-size: 0;
@@ -798,10 +816,9 @@ input[type="radio"].visually-hidden {
 /* popular products*/
 
 .popular-products {
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
-  padding-bottom: 85px;
+  padding-bottom: 80px;
 }
 
 .popular-products__list {
@@ -834,8 +851,9 @@ input[type="radio"].visually-hidden {
 
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 18px;
-  font-weight: 700;
   line-height: 24px;
+  letter-spacing: 0.18px;
+  font-weight: 700;
   color: #000000;
   text-decoration: none;
 
@@ -907,15 +925,28 @@ input[type="radio"].visually-hidden {
 /* services */
 
 .services {
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
 
   display: flex;
 
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='290'%3E%3Crect width='1440' height='290' fill='%23e5e5e5'/%3E%3C/svg%3E");
-  background-position: 0px 100px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%' height='100'%3E%3Crect width='100%' height='100' fill='%23ffffff'/%3E%3C/svg%3E");
+  background-position: 0px 0px;
   background-repeat: no-repeat;
+
+  background-color: #e5e5e5;
+
+  position: relative;
+}
+
+.services__inner-wrapper {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0;
+
+  display: flex;
+
+  background: transparent;
 
   position: relative;
 }
@@ -925,18 +956,14 @@ input[type="radio"].visually-hidden {
 
 .service__slider-control-wrapper {
   display: flex;
+  width: 420px;
   margin: 0;
   padding: 0;
 
-  padding-left: 140px;
   padding-top: 80px;
-  padding-bottom: 145px;
-  width: 420px;
-
-  height: 165px;
 
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
 
   position: relative;
@@ -945,7 +972,7 @@ input[type="radio"].visually-hidden {
 .service-slider-control-line {
   position: absolute;
   top: 0;
-  left: 415px;
+  left: 278px;
 }
 
 .services__slider-control-item-wrapper--delivery,
@@ -955,6 +982,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   width: 280px;
+  margin-bottom: 25px;
 }
 
 .service__slider-control-item {
@@ -1153,9 +1181,9 @@ input[type="radio"].visually-hidden {
   padding: 0;
   padding-top: 75px;
   padding-left: 120px;
-  padding-bottom: 150px;
+  padding-bottom: 145px;
 
-  width: 900px;
+  width: 760px;
 }
 
 .services__item {
@@ -1172,7 +1200,7 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
   width: 250px;
 
   font-family: "Gilroy", Arial, sans-serif;
@@ -1199,7 +1227,7 @@ input[type="radio"].visually-hidden {
 .service__item-icon {
   position: absolute;
   top: 10px;
-  right: 200px;
+  right: 65px;
 }
 
 
@@ -1222,7 +1250,6 @@ input[type="radio"].visually-hidden {
 /* brands list */
 
 .brands {
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
 }
@@ -1231,8 +1258,8 @@ input[type="radio"].visually-hidden {
   width: 1160px;
   margin: 0 auto;
   padding: 0;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 93px;
+  padding-bottom: 93px;
 
   display: flex;
   flex-wrap: wrap;
@@ -1301,8 +1328,6 @@ input[type="radio"].visually-hidden {
 /* about company */
 
 .about-company {
-  display: flex;
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
   padding-bottom: 82px;
@@ -1368,7 +1393,7 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-bottom: 66px;
+  padding-bottom: 53px;
 
   width: 475px;
 }
@@ -1390,13 +1415,14 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-top: 28px;
+  padding-top: 37px;
 }
 
 .about-us__delivery-item {
   display: block;
   margin: 0;
   padding: 0;
+
 
   font-family: "Gilroy", Arial, sans-serif;
   font-weight: 700;
@@ -1408,7 +1434,7 @@ input[type="radio"].visually-hidden {
 
 .about-us__delivery-item::before {
   content: '\25E6';
-  padding-right: 35px;
+  padding-right: 30px;
 }
 
 .about-us__btn-more {
@@ -1525,7 +1551,7 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-bottom: 29px;
+  padding-bottom: 39px;
 
   font-family: "OpenSans", Arial, sans-serif;
   font-size: 15px;
@@ -1612,12 +1638,10 @@ input[type="radio"].visually-hidden {
 /* footer */
 
 .main-footer {
-  width: 1440px;
-
   margin: 0 auto;
   padding: 0;
-  padding-top: 65px;
-  padding-bottom: 79px;
+  padding-top: 60px;
+  padding-bottom: 65px;
 
   background-color: #464646;
 }
@@ -1635,7 +1659,6 @@ input[type="radio"].visually-hidden {
 .main-footer__navigation-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
   margin: 0;
   padding: 0;
@@ -1645,13 +1668,10 @@ input[type="radio"].visually-hidden {
 .main-footer__navigation-link-wrapper {
   display: flex;
   justify-content: flex-end;
-  width: 325px;
+  align-items: flex-start;
+
   margin: 0;
   padding: 0;
-}
-
-.main-footer__navigation-link-wrapper-inner-page {
-  width: 500px;
 }
 
 .main-footer__user-links,
@@ -1662,10 +1682,6 @@ input[type="radio"].visually-hidden {
   padding: 0;
 
   list-style: none;
-}
-
-.main-footer__user-links-inner-page {
-  padding-right: 55px;
 }
 
 .main-footer__navigation-item {
@@ -1684,14 +1700,20 @@ input[type="radio"].visually-hidden {
   color: rgba(255, 255, 255, 0.7);
 }
 
+.main-footer__navigation-item--compare {
+  padding-right: 39px;
+}
 
 .main-footer__navigation-item--cart {
   padding-left: 24px;
 }
 
-.main-footer__navigation-item--compare {
-  padding-left: 20px;
-  padding-right: 41px;
+.main-footer__navigation-item--user {
+  padding-right: 43px;
+}
+
+.main-footer__navigation-item--user-inner-page {
+  padding-right: 20px;
 }
 
 
@@ -1699,7 +1721,6 @@ input[type="radio"].visually-hidden {
 
 .main-footer__navigation-item--user {
   padding-left: 26px;
-  padding-right: 44px;
   position: relative;
 }
 
@@ -1710,7 +1731,7 @@ input[type="radio"].visually-hidden {
   height: 12px;
 
   position: absolute;
-  top: 11px;
+  top: 12px;
   left: 0px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='12' viewBox='0 0 13 12'%3E%3Cpath fill='%23ffc600' d='M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z'/%3E%3C/svg%3E%0A");
@@ -1734,12 +1755,13 @@ input[type="radio"].visually-hidden {
 }
 
 .main-footer__navigation-item--user-quit {
+  padding-right: 41px;
+  padding-left: 0px;
   color: rgba(255, 255, 255, 0.3);
 }
 
 .main-footer__navigation-item--compare {
   padding-left: 20px;
-  padding-right: 20px;
   position: relative;
 }
 
@@ -1750,7 +1772,7 @@ input[type="radio"].visually-hidden {
   height: 10px;
 
   position: absolute;
-  top: 12px;
+  top: 14px;
   left: 0px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath fill='%23ffc600' d='M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z'/%3E%3C/svg%3E%0A");
@@ -1785,7 +1807,7 @@ input[type="radio"].visually-hidden {
   height: 12px;
 
   position: absolute;
-  top: 10px;
+  top: 12px;
   left: 2px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23ffc600' d='M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z'/%3E%3Cpath d='M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z'/%3E%3C/svg%3E%0A");
@@ -1815,11 +1837,15 @@ input[type="radio"].visually-hidden {
   line-height: 0;
 }
 
+.main-footer__logo-device {
+  padding-top: 5px;
+}
+
 .main-footer__services-wrapper {
   display: flex;
   margin: 0 auto;
   padding: 0;
-  padding-bottom: 60px;
+  padding-bottom: 65px;
   width: 1160px;
 }
 
@@ -1857,18 +1883,18 @@ input[type="radio"].visually-hidden {
 .main-footer__service-list {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   margin: 0;
   padding: 0;
-  width: 450px;
+  width: 460px;
 
   list-style: none;
 
   position: absolute;
-  top: 50%;
+  top: 7px;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
 .main-footer__services-item {
@@ -2020,8 +2046,6 @@ input[type="radio"].visually-hidden {
 }
 
 .feedback {
-  display: flex;
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
 
@@ -2257,8 +2281,6 @@ input[type="radio"].visually-hidden {
 
 
 .map {
-  display: block;
-  width: 1440px;
   margin: 0 auto;
   padding: 0;
 
@@ -2338,7 +2360,7 @@ input[type="radio"].visually-hidden {
 
 .inner-page-header {
   display: block;
-  width: 1440px;
+
   margin: 0 auto;
   padding: 0;
 }
@@ -2348,7 +2370,6 @@ input[type="radio"].visually-hidden {
   width: 1160px;
   margin: 0 auto;
   padding: 0;
-  padding-top: 45px;
 }
 
 .inner-page-header__header {
@@ -2356,9 +2377,9 @@ input[type="radio"].visually-hidden {
   padding: 0;
   padding-left: 60px;
 
-  padding-top: 40px;
+  padding-top: 37px;
 
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 47px;
@@ -2375,7 +2396,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-left: 60px;
-  padding-bottom: 50px;
+  padding-bottom: 45px;
 
   list-style: none;
 
@@ -2426,7 +2447,7 @@ input[type="radio"].visually-hidden {
 
 .catalog-wrapper {
   display: flex;
-  width: 1440px;
+
   margin: 0 auto;
   padding: 0;
 }
@@ -2434,10 +2455,12 @@ input[type="radio"].visually-hidden {
 .search-filter {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   margin: 0;
   padding: 0;
 
-  width: 467px;
+  width: calc(((100% - 1160px) /2 ) + 327px);
+  min-width: 327px;
 
   background-color: #ebebeb;
 }
@@ -2446,18 +2469,37 @@ input[type="radio"].visually-hidden {
   display: flex;
   margin: 0;
   padding: 0;
-  height: 70px;
 
+  height: 70px;
+  width: 100%;
+
+  justify-content: flex-start;
   align-items: center;
 
   background-color: #d9d9d9;
 }
 
+.search-filter__header-inner-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  width: 327px;
+  height: 70px;
+  margin-left: auto;
+
+  justify-content: flex-start;
+  align-items: center;
+
+  background-color: #d9d9d9;
+}
+
+
 .search-filter__header {
   display: block;
   margin: 0;
   padding: 0;
-  padding-left: 200px;
+  padding-left: 60px;
 
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 16px;
@@ -2474,7 +2516,9 @@ input[type="radio"].visually-hidden {
   display: flex;
   margin: 0;
   padding: 0;
-  padding-left: 200px;
+  padding-left: 60px;
+
+  width: 267px;
 
   flex-direction: column;
   justify-content: flex-start;
@@ -2488,7 +2532,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-top: 69px;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
 
   font-size: 0;
   line-height: 0;
@@ -2550,7 +2594,7 @@ input[type="radio"].visually-hidden {
 }
 
 .search-filter__form-price-slider-controls-toggle--min {
-  left: 0px;
+  left: -5px;
 }
 .search-filter__form-price-slider-controls-toggle--max {
   left: 110px;
@@ -2648,7 +2692,8 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
 }
 
-.search-filter__color-item-input:hover + .search-filter__color-item-box {
+.search-filter__color-item-input:hover + .search-filter__color-item-box,
+.search-filter__color-item-input:focus + .search-filter__color-item-box {
   opacity: 0.6;
 }
 
@@ -2717,7 +2762,7 @@ input[type="radio"].visually-hidden {
   height: 2px;
   margin: 0;
   padding: 0;
-  padding-bottom: 12px;
+  padding-bottom: 10px;
 
   font-size: 0;
   line-height: 0;
@@ -2784,7 +2829,8 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
 }
 
-.search-filter__bt-radio-input:checked:hover + .search-filter__bt-radio-box {
+.search-filter__bt-radio-input:checked:hover + .search-filter__bt-radio-box,
+.search-filter__bt-radio-input:checked:focus + .search-filter__bt-radio-box {
   position: absolute;
   width: 25px;
   height: 25px;
@@ -2919,7 +2965,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
 
-  width: 973px;
+  width: calc(((100% - 1160px) / 2) + 833px);
 }
 
 .search-result__header-wrapper {
@@ -2927,6 +2973,18 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
 
+  width: 100%;
+  height: 70px;
+
+  background-color: #ebebeb;
+}
+
+.search-result__header-inner-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  width: 833px;
   height: 70px;
 
   justify-content: space-between;
@@ -2956,7 +3014,9 @@ input[type="radio"].visually-hidden {
   display: flex;
   margin: 0;
   padding: 0;
+  /*
   padding-right: 140px;
+  */
   width: 560px;
   justify-content: space-between;
   align-items: center;
@@ -3063,7 +3123,7 @@ input[type="radio"].visually-hidden {
   flex-direction: column;
   justify-content: flex-start;
   width: 360px;
-  height: 505px;
+  min-height: 505px;
 }
 
 .search-result__goods-item:nth-child(2n+1) {
@@ -3084,13 +3144,18 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .search-result__googs-card-header {
   display: flex;
   margin: 0;
   padding: 0;
-  width: 250px;
+  width: 260px;
+}
+
+.search-result__googs-card-header-min {
+  width: 200px;
 }
 
 .search-result__googs-card-header-link {
@@ -3231,7 +3296,8 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   margin-left: 75px;
-  margin-bottom: 80px;
+  margin-top: -10px;
+  margin-bottom: 75px;
   width: 760px;
   height: 70px;
 
@@ -3248,6 +3314,8 @@ input[type="radio"].visually-hidden {
   align-items: center;
 
   list-style: none;
+
+  transform: translateX(-15px);
 }
 
 .search-result__page-navigation-item {
@@ -3282,7 +3350,7 @@ input[type="radio"].visually-hidden {
 .search-result__page-navigation-link-forward {
   display: block;
   margin: 0;
-  padding: 24px;
+  padding: 24px 27px;
 
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 16px;
